tests/should_fail/option_must_use_list_get.nv
module main

// SHOULD FAIL: List::get returns Option — bare use is discard
let xs = [1, 2, 3]
xs.get(0)
println("should not reach")
